--- a/docs/Community-Scheme-Wiki.desktop
+++ b/docs/Community-Scheme-Wiki.desktop
@@ -4,4 +4,4 @@ Type=Link
 Name=Community-Scheme-Wiki
 Comment=
 Icon=user-bookmarks
-URL=http://community.schemewiki.org/
+URL=http://community.schemewiki.org/?SICP-Solutions
