--- a/sec1.2/1_2 Structure and Interpretation of Computer Programs.desktop
+++ b/sec1.2/1_2 Structure and Interpretation of Computer Programs.desktop
@@ -4,4 +4,4 @@ Type=Link
 Name=1.2 Structure and Interpretation of Computer Programs
 Comment=
 Icon=user-bookmarks
-URL=https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-H-11.html#%_sec_1.2.5
+URL=https://sarabander.github.io/sicp/html/1_002e2.xhtml#g_t1_002e2
