--- a/sec1.3/1_3 Structure and Interpretation of Computer Programs.desktop
+++ b/sec1.3/1_3 Structure and Interpretation of Computer Programs.desktop
@@ -4,4 +4,4 @@ Type=Link
 Name=1.3 Structure and Interpretation of Computer Programs
 Comment=
 Icon=user-bookmarks
-URL=https://mitpress.mit.edu/sites/default/files/sicp/full-text/book/book-Z-H-12.html
+URL=https://sarabander.github.io/sicp/html/1_002e3.xhtml#g_t1_002e3
